# site

./: .gitignore  CLAUDE.md  README.md  astro.config.mjs  generate.py  index.html  package.json
auth-contracts/: oauth.yaml
codegen/: __init__.py  gen_sdk_stubs.py  generate  generate.py  ir.json  ir.py  ir_diff.py  links.py  migrations.py  schema_hash.py  sdk_client.py  services.py  tool_surface.py  verify_ops.py
docs/: README.md  astro.config.mjs  generate  generate.py  package.json  pnpm-lock.yaml
scripts/: fix-paths.mjs  validate_prior_art.py
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/agentos/: __init__.py  _bridge.py  _engine_client.py  _generated.py  _generated_auth_contracts.py  _jar.py  agent.py  audit_embedded_shapes.py  audit_rust_const_usage.py  audit_rust_producers.py  audit_rust_producers.report.md  audit_shape_relations.py  blobs.py  browse.py  browser_session.py  capability.py  checkpoint.py  classify_orphans.py  classify_orphans.report.md  cli.py  client.py  credentials.py  crypto.py  dates.py  decorators.py  guide.py  http.py  identity.py  llm.py  oauth.py  plist.py  progress.py  qr.py  results.py  rust_shape_codegen.report.md  scaffold.py  secrets.py  services.py  shape_cli.py  shapes.py  (+6 more)
sdk/python/agentos/macos/: __init__.py  contacts.py  keychain.py  plist.py
sdk/python/tests/: test_session_connection_domain.py
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
sdk/rust/src/shapes/: account.rs  activity.rs  actor.rs  aircraft.rs  airline.rs  airport.rs  app.rs  auth_challenge.rs  birth.rs  book.rs  booking_offer.rs  bookmark.rs  branch.rs  brand.rs  browser.rs  calendar.rs  change.rs  channel.rs  class.rs  community.rs  concern.rs  conversation.rs  conversion.rs  creative_work.rs  credential.rs  cursor.rs  device.rs  dimension.rs  dns_record.rs  document.rs  domain.rs  email.rs  episode.rs  event.rs  fare.rs  file.rs  financial_account.rs  flight.rs  floorplan.rs  flow.rs  (+97 more)
shapes/: account.yaml  aircraft.yaml  book.yaml  booking_offer.yaml  bookmark.yaml  brand.yaml  channel.yaml  class.yaml  community.yaml  conversation.yaml  email.yaml  episode.yaml  event.yaml  financial_account.yaml  git_commit.yaml  group.yaml  invitation.yaml  list.yaml  loaded_model.yaml  membership.yaml  message.yaml  model.yaml  (+19 more)
(+1242 files in other folders)
