[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-sdk"
version = "0.1.0"
description = "agentOS Skill Development Kit"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "idna>=3",
  "phonenumbers>=8",
  "fpdf2>=2.8",
  "qrcode[pil]>=7",
]

[project.scripts]
agent-sdk = "agentos.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agentos"]
