[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-sdk"
version = "0.1.0"
description = "agentOS App SDK"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "idna>=3",
  "phonenumbers>=8",
  "fpdf2>=2.8",
  "qrcode[pil]>=7",
  # App quality standards (core/CLAUDE.md): HTML parsing is lxml +
  # cssselect, price parsing is price-parser. Part of the runtime contract.
  "lxml>=5",
  "cssselect>=1.2",
  "price-parser>=0.3",
]

[project.scripts]
agent-sdk = "agentos.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agentos"]
