[package]
name = "agentos-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust SDK for AgentOS — generated ShapeDef constants + typed structs. Read by engine crates that write graph data; produced by `python3 platform/codegen/generate.py`."

# `[workspace]` here marks this crate as its own one-crate workspace —
# cargo refuses to add it to the sibling `core/` workspace because
# workspace members must live below the workspace root on disk, and
# `platform/sdk/rust/` is the wrong side of that tree. Consumers depend
# on this crate via `path = "../../../platform/sdk/rust"`; cargo
# compiles it as a separate crate, the resulting rlib links into the
# engine binary as if it were a workspace member.
[workspace]

[dependencies]
# Owned-`ShapeDef` lives in agentos-graph (the same crate that has the
# write primitive that consumes it). The SDK re-exports nothing —
# callers import directly: `use agentos_sdk::shapes::VOLUME`.
agentos-graph = { path = "../../../core/crates/graph" }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
